[gd_scene load_steps=39 format=3 uid="uid://drmr48jgoyqrp"]

[ext_resource type="Script" uid="uid://c7v6hbysaqj5l" path="res://scripts/warrior_component_state_machine.gd" id="1_1i32f"]
[ext_resource type="Texture2D" uid="uid://cwrn0smmq7673" path="res://assets/sprites/knight.png" id="2_aljyq"]
[ext_resource type="FontFile" uid="uid://6rxom0gy206u" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_jge1h"]
[ext_resource type="AudioStream" uid="uid://ux7p2v0r66kh" path="res://assets/sounds/hurt.wav" id="3_n4kqn"]
[ext_resource type="Script" uid="uid://buxhmn181qppg" path="res://scripts/state_bounce.gd" id="4_h00hi"]
[ext_resource type="Script" uid="uid://cy561dq125eij" path="res://scripts/player_input.gd" id="4_t51dj"]
[ext_resource type="Script" uid="uid://ccdlxhmo8377w" path="res://scripts/state_dash.gd" id="5_t51dj"]
[ext_resource type="Script" uid="uid://hqkwb463nh13" path="res://scripts/state_flap.gd" id="6_jge1h"]
[ext_resource type="Script" uid="uid://xrkyeqn1lj2i" path="res://scripts/state_idle.gd" id="7_ffd1n"]
[ext_resource type="Script" uid="uid://dn35pci0tfs7i" path="res://scripts/state_jump.gd" id="8_l71u3"]
[ext_resource type="Script" uid="uid://c6fsop3rjrhc2" path="res://scripts/state_run.gd" id="9_ykjuj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_aljyq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_aljyq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_aljyq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_aljyq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_aljyq")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_aljyq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_aljyq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_aljyq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_aljyq")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_aljyq")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_aljyq")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_aljyq")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_aljyq")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_aljyq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_aljyq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_aljyq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_aljyq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_aljyq")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_aljyq")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_aljyq")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("2_aljyq")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a0q0s"]
radius = 6.0
height = 26.0

[sub_resource type="Animation" id="Animation_trheq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6pwxe"]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("DieSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 66)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"respawn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa7tf"]
_data = {
&"RESET": SubResource("Animation_trheq"),
&"die": SubResource("Animation_6pwxe")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6pwxe"]
radius = 18.75
height = 81.25

[node name="warriorComponentStateMachine" type="CharacterBody2D" groups=["Player"]]
z_index = 5
position = Vector2(17, 66)
collision_layer = 6
script = ExtResource("1_1i32f")

[node name="StateLabel" type="Label" parent="."]
offset_left = -46.0
offset_top = -54.0
offset_right = 44.0
offset_bottom = -30.0
theme_override_fonts/font = ExtResource("2_jge1h")
theme_override_font_sizes/font_size = 24
text = "test"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15.62)
scale = Vector2(1.41, 2.51)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"run"
autoplay = "idle"

[node name="PlatformCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_a0q0s")

[node name="JRay" type="RayCast2D" parent="."]
position = Vector2(7, -1)
target_position = Vector2(0, -15)

[node name="CeilingRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
target_position = Vector2(0, -19)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pa7tf")
}

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_n4kqn")
bus = &"SFX"

[node name="HitBox" type="Area2D" parent="." groups=["Player"]]
position = Vector2(0, -4)
scale = Vector2(0.32, 0.32)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 9.375)
shape = SubResource("CapsuleShape2D_6pwxe")

[node name="input_component" type="Node" parent="."]
script = ExtResource("4_t51dj")

[node name="states" type="Node" parent="."]

[node name="bounce_state" type="Node" parent="states"]
script = ExtResource("4_h00hi")

[node name="dash_state" type="Node" parent="states"]
script = ExtResource("5_t51dj")

[node name="flap_state" type="Node" parent="states"]
script = ExtResource("6_jge1h")

[node name="idle_state" type="Node" parent="states"]
script = ExtResource("7_ffd1n")

[node name="jump_state" type="Node" parent="states"]
script = ExtResource("8_l71u3")

[node name="run_state" type="Node" parent="states"]
script = ExtResource("9_ykjuj")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
